--- a/index.html
+++ b/index.html
@@ -1,12 +1,342 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="Style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informatika1A</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Design Agency free bootstrap template by Gridgum</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/ionicons.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/min/waypoints.min.js"></script>
+  <script src="js/jquery.counterup.js"></script>
+
+  <!-- Google Map -->
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script src="js/google-map-init.js"></script>
+
+
+  <script src="js/main.js"></script>
+
+
 </head>
-<body>
-    <h2 style="background-color: white; box-sizing: border-box; color: #333e48; font-family: Inter, &quot;Open Sans&quot;, HelveticaNeue-Light, &quot;Helvetica Neue Light&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, &quot;Lucida Grande&quot;, sans-serif; font-size: 1.643em; font-weight: 500; letter-spacing: -0.14px; line-height: 1.043em; margin-bottom: 1em; margin-top: 0px;"><div class="separator" style="clear: both; text-align: center;"><a href="https://blogger.googleusercontent.com/img/a/AVvXsEiQN3n7J0DJaH8uZXvIlv9JbCMIsYR2r0N3W7JZ6L8_2q3s-mkuNWX1izkkhtEX62b_NjTlpjyl1GPTQ6d3O-n4PnWxYOow0tKogiOiscW4kDAtvQ4yra978GzSNtX67T-bp3biwGAUC-Z7MJpPrAdOtIKIXtFEp4AVHnXa6OCk9EjVOVHybuicdBPCBGUc" style="clear: left; float: left; margin-bottom: 1em; margin-right: 1em;"><img alt="" data-original-height="270" data-original-width="270" height="240" src="https://blogger.googleusercontent.com/img/a/AVvXsEiQN3n7J0DJaH8uZXvIlv9JbCMIsYR2r0N3W7JZ6L8_2q3s-mkuNWX1izkkhtEX62b_NjTlpjyl1GPTQ6d3O-n4PnWxYOow0tKogiOiscW4kDAtvQ4yra978GzSNtX67T-bp3biwGAUC-Z7MJpPrAdOtIKIXtFEp4AVHnXa6OCk9EjVOVHybuicdBPCBGUc" width="240" /></a></div><br /></h2><h2 style="background-color: white; box-sizing: border-box; color: #333e48; font-family: Inter, &quot;Open Sans&quot;, HelveticaNeue-Light, &quot;Helvetica Neue Light&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, &quot;Lucida Grande&quot;, sans-serif; font-size: 1.643em; font-weight: 500; letter-spacing: -0.14px; line-height: 1.043em; margin-bottom: 1em; margin-top: 0px;">HP 14s-dk0076AU /AMD Ryzen 5-3500U/8GB/512GB SSD/14″/Win 10 Home/Gold</h2><div><br /></div><div><br /></div><div><br /></div><div><span style="font-size: x-large;"><br /></span></div><div><span style="font-size: x-large;"><br /></span></div><div><span style="font-size: x-large;">spesifikasi:</span></div><div><div><ul style="text-align: left;"><li><span style="font-size: medium;">AMD Ryzen™ 5 3500U (2.1 GHz base clock, up to 3.7 GHz max boost clock, 4 MB L3 cache, 4 cores)</span></li><li><span style="font-size: medium;">14″ diagonal HD SVA BrightView micro-edge WLED-backlit (1366 x 768)</span></li><li><span style="font-size: medium;">8 GB DDR4-2400 SDRAM (2 x 4 GB)</span></li><li><span style="font-size: medium;">512 GB PCIe® NVMe™ M.2 SSD</span></li><li><span style="font-size: medium;">AMD Radeon™ Vega 8 Graphics</span></li><li><span style="font-size: medium;">Chiclet Keyboard, Wifi, Bluetooth® 4.2 combo</span></li><li><span style="font-size: medium;">Windows 10 Home</span></li></ul></div><div><br /></div></div>
+<body id="page-top">
+
+
+
+<!-- Header Start -->
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <!-- header Nav Start -->
+        <nav class="navbar navbar-default navbar-fixed-top navbar-design">
+            <div class="container">
+                  <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button>
+                      <a class="navbar-brand" href="index.html">
+                        <p>Blogku</p><!-- <img src="img/logo.png" alt="Logo"> -->
+                      </a>
+                    </div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                      <ul class="nav navbar-nav navbar-right">
+                          <li><a class="page-scroll" href="#page-top">Home</a></li>
+                        <li><a class="page-scroll" href="#intro">About</a></li>
+                        <li><a class="page-scroll" href="#feature">Works</a></li>
+                        <li><a class="page-scroll" href="#service">Services</a></li>
+                        <li><a class="page-scroll" href="#testimonial">Testimonials</a></li>
+                      </ul>
+                    </div><!-- /.navbar-collapse -->
+                  </div><!-- /.container-fluid -->
+            </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header><!-- header close -->
+
+<!-- Slider Start -->
+<section id="slider">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 col-md-offset-2">
+        <div class="block">
+          <h1 class="animated fadeInUp">Selamat Datang</h1>
+          <p class="animated fadeInUp">Terima kasih telah berkunjung ke Blogku.</p>
+          <p class="animated fadeInUp">Semangat ya untuk yang ngejalani hari ini,walau banyak rintangan yang kamu hadapi,tapi jangan lupa jaga kesehatan yaa...</p>
+          <p class="animated fadeInUp">Kalo kamu capek jangan lupa istirahat...</p>
+          <p class="animated fadeInUp">Nanti akan ada waktunya kamu menikmati hasil dari kesabaranmu.</p>
+          <p class="animated fadeInUp">SEMANGAT....</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Wrapper Start -->
+<section id="intro">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7 col-sm-12">
+        <div class="block">
+          <div class="section-title">
+            <h2>Tentang Saya</h2>
+            <p>Perkenalkan nama saya Muhammad Nur Hadi Cahyono,mahasiswa Universitas Bhinneka PGRI progam studi Informatika</p>
+
+          </div>
+          <p>Blog ini saya buat untuk memenuhi tugas mata kuliah Arsitektur Sistem Komputer di progam studi Informatika fakultas Sains dan Teknologi</p>
+          <p>Blog ini berisi tentang spesifikasi laptop HP 14s-dk0076AU</p>
+        </div>
+      </div><!-- .col-md-7 close -->
+      <div class="col-md-5 col-sm-12">
+        <div class="block">
+          <img src="img/wrapper-img.png" alt="Img">
+        </div>
+      </div><!-- .col-md-5 close -->
+    </div>
+  </div>
+</section>
+
+<section id="feature">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-6">
+        <h2>SPESIFIKASI</h2>
+        <p># AMD Ryzen™ 5 3500U (2.1 GHz base clock, up to 3.7 GHz max boost clock, 4 MB L3 cache, 4 cores)</p>
+        <p># 14″ diagonal HD SVA BrightView micro-edge WLED-backlit (1366 x 768)</p>
+        <p># 8 GB DDR4-2400 SDRAM (2 x 4 GB)</p>
+        <p># 512 GB PCIe® NVMe™ M.2 SSD</p>
+        <p># AMD Radeon™ Vega 8 Graphics</p>
+        <p># Chiclet Keyboard, Wifi, Bluetooth® 4.2 combo</p>
+        <p># Windows 10 Home</p>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Service Start -->
+<section id="service">
+  <div class="container">
+    <div class="row">
+      <div class="section-title">
+        <h2>TERIMA KASIH</h2>
+        <p>Semoga blog ini memberikan manfaaat bagi yang membacanya</p>
+        <p>Karena sebaik-baik manusia adalah yang bermanfaat bagi manusia lain</p>
+      </div>
+    </div>
+    <!-- <div class="row ">
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="icon ion-coffee"></i>
+          <h4>Coffee</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-compass"></i>
+          <h4>Timing</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-image"></i>
+          <h4>Gallery</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-bug"></i>
+          <h4>Debugging</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-headphone"></i>
+          <h4>24/7 Service</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-leaf"></i>
+          <h4>Development</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-planet"></i>
+          <h4>Global</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-earth"></i>
+          <h4>Web Design</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.</p>
+        </div>
+      </div>
+    </div> -->
+  <!-- </div>
+</section>
+<section id="call-to-action">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="block">
+          <h2>Web design and SEO</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.
+            Integer laoreet tristique leo fringilla malesuada. Maecenas consequat justo a quam sodales tempor.</p>
+          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
+<!-- Content Start -->
+<!-- <section id="testimonial">
+  <div class="container">
+    <div class="row">
+      <div class="section-title text-center">
+        <h2>Projects and feedback</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.
+          Integer laoreet tristique leo fringilla malesuada. Maecenas consequat justo a quam sodales tempor.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="block">
+          <ul class="counter-box clearfix">
+            <li>
+              <div class="block">
+                <i class="fa fa-code"></i>
+                <h4 class="counter">1745</h4>
+                <span>Projects</span>
+              </div>
+            </li>
+            <li>
+              <div class="block">
+                <i class="fa fa-smile-o"></i>
+                <h4 class="counter">2000</h4>
+                <span>and more happy customers</span>
+              </div>
+            </li>
+            <li>
+              <div class="block">
+                <i class="fa fa-edit"></i>
+                <h4 class="counter">769</h4>
+                <span>Reviews</span>
+              </div>
+            </li>
+            <li>
+              <div class="block">
+                <i class="fa fa-user"></i>
+                <h4 class="counter">7586</h4>
+                <span>Customers</span>
+              </div>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="testimonial-carousel">
+          <div id="testimonial-slider" class="owl-carousel">
+            <div>
+              <img src="img/cotation.png" alt="IMG">
+              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.
+                Integer laoreet tristique leo fringilla malesuada. Maecenas consequat justo a quam sodales tempor."</p>
+              <div class="user">
+                <img src="img/item-img1.jpg" alt="Pepole">
+                <p><span>Ann Rosenberg</span> Project Manager</p>
+              </div>
+            </div>
+            <div>
+              <img src="img/cotation.png" alt="IMG">
+              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.
+                Integer laoreet tristique leo fringilla malesuada. Maecenas consequat justo a quam sodales tempor."</p>
+              <div class="user">
+                <img src="img/item-img1.jpg" alt="Pepole">
+                <p><span>Mary Green</span> Marketing & SEO</p>
+              </div>
+            </div>
+            <div>
+              <img src="img/cotation.png" alt="IMG">
+              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.
+                Integer laoreet tristique leo fringilla malesuada. Maecenas consequat justo a quam sodales tempor."</p>
+              <div class="user">
+                <img src="img/item-img1.jpg" alt="Pepole">
+                <p><span>Natalie Dorm</span> Support</p>
+              </div>
+            </div>
+            <div>
+              <img src="img/cotation.png" alt="IMG">
+              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt in odio ac auctor.
+                Integer laoreet tristique leo fringilla malesuada. Maecenas consequat justo a quam sodales tempor."</p>
+              <div class="user">
+                <img src="img/item-img1.jpg" alt="Pepole">
+                <p><span>Elisabeth Smith</span> Call center</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
+
+
+
+
+
+
+
+
+
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="footer-manu">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">Our works</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Terms of usage</a></li>
+          </ul>
+        </div>
+        <p>Copyright &copy; 2016 by <span><a href="http://www.gridgum.com">Gridgum</a></span></p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
 </body>
 </html>
